fix: align checkbox when there is more than 1 line of text

--- a/src/components/Table/hoc/withTableSelection/withTableSelection.scss
+++ b/src/components/Table/hoc/withTableSelection/withTableSelection.scss
@@ -7,6 +7,8 @@
     }
 
     &__selection-checkbox {
+        display: flex;
+        align-items: center;
         padding: inherit;
         border-bottom: none;
         position: absolute;
